@@ -81,34 +81,37 @@ dependencies {
 
     compileOnly(kotlinStdlib())
 
-    testApi(projectTests(":compiler:tests-common"))
-    testApi(projectTests(":compiler:test-infrastructure"))
-    testApi(projectTests(":compiler:test-infrastructure-utils"))
-    testApi(projectTests(":compiler:tests-compiler-utils"))
-    testApi(projectTests(":compiler:tests-common-new"))
-    testImplementation(projectTests(":generators:test-generator"))
+    testApi(testFixtures(project(":compiler:tests-common")))
+    testApi(testFixtures(project(":compiler:test-infrastructure")))
+    testApi(testFixtures(project(":compiler:test-infrastructure-utils")))
+    testApi(testFixtures(project(":compiler:tests-compiler-utils")))
+    testApi(testFixtures(project(":compiler:tests-common-new")))
+    testImplementation(testFixtures(project(":generators:test-generator")))
     testApi(project(":plugins:plugin-sandbox"))
     testApi(project(":compiler:incremental-compilation-impl"))
-    testApi(projectTests(":compiler:incremental-compilation-impl"))
+    testApi(testFixtures(project(":compiler:incremental-compilation-impl")))
 
-    testImplementation(projectTests(":js:js.tests"))
+    testApi(testFixtures(project(":js:js.tests")))
     testImplementation(libs.junit4)
     testApi(kotlinTest())
 
     // Dependencies for Kotlin/Native test infra:
     if (!kotlinBuildProperties.isInIdeaSync) {
-        testImplementation(projectTests(":native:native.tests"))
+        testApi(testFixtures(project(":native:native.tests")))
     }
+    testImplementation(project(":compiler:ir.backend.native"))
     testImplementation(project(":native:kotlin-native-utils"))
+    testImplementation(testFixtures(project(":native:native.tests:klib-ir-inliner")))
+    testImplementation(project(":kotlin-util-klib-abi"))
     testImplementation(commonDependency("org.jetbrains.teamcity:serviceMessages"))
 
     // todo: remove unnecessary dependencies
     testImplementation(project(":kotlin-compiler-runner-unshaded"))
 
     testImplementation(commonDependency("commons-lang:commons-lang"))
-    testImplementation(projectTests(":compiler:tests-common"))
-    testImplementation(projectTests(":compiler:tests-common-new"))
-    testImplementation(projectTests(":compiler:test-infrastructure"))
+    testApi(testFixtures(project(":compiler:tests-common")))
+    testApi(testFixtures(project(":compiler:tests-common-new")))
+    testApi(testFixtures(project(":compiler:test-infrastructure")))
     testCompileOnly("org.jetbrains.kotlinx:atomicfu:0.25.0")
 
     testApi(platform(libs.junit.bom))
@@ -141,6 +144,11 @@ dependencies {
             attribute(Usage.USAGE_ATTRIBUTE, objects.named(KotlinUsages.KOTLIN_API))
         }
     }
+    implicitDependencies("org.jetbrains.kotlinx:atomicfu-iossimulatorarm64:0.25.0"){
+        attributes {
+            attribute(Usage.USAGE_ATTRIBUTE, objects.named(KotlinUsages.KOTLIN_API))
+        }
+    }
     implicitDependencies("org.jetbrains.kotlinx:atomicfu-mingwx64:0.25.0"){
         attributes {
             attribute(Usage.USAGE_ATTRIBUTE, objects.named(KotlinUsages.KOTLIN_API))
@@ -164,13 +172,12 @@ dependencies {
 optInToExperimentalCompilerApi()
 optInToUnsafeDuringIrConstructionAPI()
 
-val generationRoot = projectDir.resolve("tests-gen")
-
 sourceSets {
     "main" { projectDefault() }
     "test" {
         projectDefault()
-        this.java.srcDir(generationRoot.name)
+        java.srcDirs("testFixtures")
+        generatedTestDir()
     }
 }
 
@@ -191,25 +198,44 @@ projectTest(jUnitMode = JUnitMode.JUnit5) {
     val localAtomicfuJsIrRuntimeForTests: FileCollection = atomicfuJsIrRuntimeForTests
     val localAtomicfuJsClasspath: FileCollection = atomicfuJsClasspath
     val localAtomicfuJvmClasspath: FileCollection = atomicfuJvmClasspath
+    val localAtomicfuCompilerPluginClasspath: FileCollection = atomicfuCompilerPluginForTests
 
     doFirst {
         systemProperty("atomicfuJsIrRuntimeForTests.classpath", localAtomicfuJsIrRuntimeForTests.asPath)
         systemProperty("atomicfuJs.classpath", localAtomicfuJsClasspath.asPath)
         systemProperty("atomicfuJvm.classpath", localAtomicfuJvmClasspath.asPath)
+        systemProperty("atomicfu.compiler.plugin", localAtomicfuCompilerPluginClasspath.asPath)
     }
 }
 
 publish()
 standardPublicJars()
 
+val inputTags = findProperty("kotlin.native.tests.tags")?.toString()
+val tags = buildString {
+    append("atomicfu-native") // Include all tests with the "atomicfu-native" tag
+    if (inputTags != null) {
+        append("&($inputTags)")
+    }
+}
 val nativeTest = nativeTest(
     taskName = "nativeTest",
-    tag = "atomicfu-native", // Include all tests with the "atomicfu-native" tag.
+    tag = tags,
     requirePlatformLibs = true,
     customCompilerDependencies = listOf(atomicfuJvmClasspath),
     customTestDependencies = listOf(atomicfuNativeKlib),
     compilerPluginDependencies = listOf(atomicfuCompilerPluginForTests)
-)
+) {
+    val localAtomicfuNativeKlib: FileCollection = atomicfuNativeKlib
+    doFirst {
+        systemProperty("atomicfuNative.classpath", localAtomicfuNativeKlib.asPath)
+    }
+
+    // To workaround KTI-2421, we make these tests run on JDK 11 instead of the project-default JDK 8.
+    // Kotlin test infra uses reflection to access JDK internals.
+    // With JDK 11, some JVM args are required to silence the warnings caused by that:
+    jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
+}
 
 tasks.named("check") {
     // Depend on the test task that launches Native tests so that it will also run together with tests
@@ -217,4 +243,9 @@ tasks.named("check") {
     if (kotlinBuildProperties.isKotlinNativeEnabled) {
         dependsOn(nativeTest)
     }
+}
+
+val generateTests by generator("org.jetbrains.kotlin.generators.tests.GenerateAtomicfuTestsKt") {
+    javaLauncher.set(project.getToolchainLauncherFor(JdkMajorVersion.JDK_11_0))
+    dependsOn(":compiler:generateTestData")
 }
